--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^5.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.1",
