--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,6 @@ PORT=3001
 NODE_ENV=DEVELOPMENT
 
 APP_URL=http://localhost:3001
-
+APP_SERVER=LOCAL
 DB_LOCAL_URI=mongodb://127.0.0.1:27017/ecommerce_learn
+DB_LIVE_URI="mongodb+srv://tezz0386:HztGXS3amDSRoSjT@atlascluster.a1ezltl.mongodb.net/?retryWrites=true&w=majority"
