--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server.js",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server.js",
     "db:seed": "node database/seeders/DatabaseSeeder.js",
-    "product:seed": "node database/seeders/ProductSeeder.js"
+    "product:seed": "node database/seeders/ProductSeeder.js",
+    "menu:seed": "node database/seeders/MenuSeeder.js",
+    "category:seed": "node database/seeders/CategorySeeder.js"
   },
   "author": "Tejendra Dangaura",
   "license": "MIT",
