--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
