--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
+    "npm": "^10.2.5",
     "proper": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +28,7 @@
     "react-slick": "^0.29.0",
     "redux": "^5.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
     "three": "^0.159.0",
     "web-vitals": "^2.1.4"
